create-securitygroups.tf
resource "aws_security_group" "ALLOW-SSH" {
  name        = "ALLOW-SSH"
  description = "Allow SSH traffic"
  vpc_id      = "${aws_vpc.DG-VPC.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ALLOW-JENKINS" {
  name        = "ALLOW-JENKINS"
  description = "Allow Jenkins port"
  vpc_id      = "${aws_vpc.DG-VPC.id}"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
